--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Accessible toilets</title>
+  <title>Toilet Trip Advisor</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
@@ -18,7 +18,8 @@
       <!-- top -->
       <div class="col-md-12">
         <hr>
-        <h1>Accessible toilets at stations and stops</h1>
+        <h1>PitStop Spotter</h1>
+        <h3>Accessible toilets at stations and stops</h3>
         <hr>
         <button id="menu-toggle" class="btn btn-info" data-bind="click: openSidebar">
           ☰
@@ -48,7 +49,7 @@
         <hr>
         <hr>
         <div class="footer">
-          <p>This project was developed by Team ...</p>
+          <p>This project was developed by Team inclusivIT</p>
           <p>Icons from <a href="https://mapicons.mapsmarker.com">Map Icons Collection</a></p>
         </div>
       </div>
