--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <!-- top -->
       <div class="col-md-12">
         <hr>
-        <h1>PitStop</h1>
-        <h2>Accessible toilets to commutters</h2>
+        <h1>incusivIT</h1>
+        <h2>Accessible toilets to commuters</h2>
         <hr>
         <button id="menu-toggle" class="btn btn-info" data-bind="click: openSidebar">
           ☰
@@ -41,7 +41,7 @@
           <input class="btn btn-default" id="hide-listings" type="button" value="Hide results" data-bind="click: hideListings">
         </div>
         <hr>
-        <div>
+        <div id="searchbar">
           <h3>Search by Address</h3>
           <input id="zoom-to-area-text" type="text" placeholder="Ex: 2000">
           <input class="btn btn-default" id="zoom-to-area" type="button" value="Zoom" data-bind="click: zoom">
@@ -49,7 +49,7 @@
         <hr>
         <hr>
         <div class="footer">
-          <p>This project was developed by Team inclusivIT</p>
+          <p>Team inclusivIT</p>
           <p>Icons from <a href="https://mapicons.mapsmarker.com">Map Icons Collection</a></p>
         </div>
       </div>
