--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- top -->
       <div class="col-md-12">
         <hr>
-        <h1>incusivIT</h1>
+        <h1>inclusivIT</h1>
         <h2>Accessible toilets to commuters</h2>
         <hr>
         <button id="menu-toggle" class="btn btn-info" data-bind="click: openSidebar">
