--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PitStop</title>
+  <title>Accessible Toilet Finder</title>
+  <link rel = "icon" type = "image/png" href = "img/logo.png">
+    <!-- For apple devices -->
+    <link rel = "apple-touch-icon" type = "image/png" href = "img/logo.png"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
@@ -18,9 +21,7 @@
       <!-- top -->
       <div class="col-md-12">
         <hr>
-        <h1>inclusivIT</h1>
-        <h2>Accessible toilets to commuters</h2>
-        <hr>
+        <img id="logo" src="img/logo.png" alt="Accessible toilets finder">
         <button id="menu-toggle" class="btn btn-info" data-bind="click: openSidebar">
           ☰
         </button>
@@ -47,9 +48,9 @@
           <input class="btn btn-default" id="zoom-to-area" type="button" value="Zoom" data-bind="click: zoom">
         </div>
         <hr>
-        <hr>
         <div class="footer">
-          <p>Team inclusivIT</p>
+          <img id="teamlogo" class="img-rounded" src="img/teamlogo.png" alt="Team inclusivIT">
+          <br>
           <p>Icons from <a href="https://mapicons.mapsmarker.com">Map Icons Collection</a></p>
         </div>
       </div>
